--- a/app.css
+++ b/app.css
@@ -43,4 +43,15 @@ body {
     color: darkred;
     border: 2px solid darkred;
 }
+.ml1 {
+    background-color: #f44336;
+    margin-left: 8px;
+border: none;
+color: white;
+padding: 8px 16px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 16px;
+}
 
