--- a/src/components/AnswersList/AnswerItem/AnswerItem.css
+++ b/src/components/AnswersList/AnswerItem/AnswerItem.css
@@ -9,3 +9,9 @@ border: 1px solid #fff;
     background: rgba(255, 255,255, .4);
     transition: background .3s ease-in-out;
 }
+.AnswerItem.success {
+    background: rgba(161, 240, 69, 0.7);
+}
+.AnswerItem.error {
+    background: rgba(240, 87, 108, .7);
+}
